--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %}
 
-<h2>Traffic Sign Recognition Using Deep Learning</h2>
+<h2>Traffic Sign Detection Using Deep Learning</h2>
 <img src="https://i.postimg.cc/rFYVTRnN/yellow-traffic-sign-set-isolated-white-background-97458-258.jpg" 
 alt="" style="width: 30%; height:30%">
 
